recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: not found: value levels
	if (levels==0) {avance(length); droite(120); avance(length); droite(120);avance(length); droite(120); return}
            ^